<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context=".Tentang">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/topologi"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:text="@string/judul"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_below="@+id/thumbnail"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title2"
                android:layout_marginTop="30dp"
                android:maxLines="3"
                android:padding="5dp"
                android:text="@string/description1"
                android:textColor="#000"
                android:textSize="14dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title3"
                android:maxLines="3"
                android:text="@string/nama"
                android:textColor="#000"
                android:textSize="14dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title4"
                android:maxLines="3"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/copyright"
                android:textColor="#000"
                android:textSize="12dp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:padding="5dp"
                android:text="@string/description"
                android:textColor="#000"
                android:textSize="14dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:layout_below="@+id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
